Locked the width of the card to prevent text overflow

--- a/src/css/SkillRecordGridItem.css
+++ b/src/css/SkillRecordGridItem.css
@@ -3,6 +3,7 @@
     display: inline-block;
     margin: 1em;
     position: relative;
+    width: 80vw;
 }
 @media (min-width: 480px) {
     .card {
